--- a/roles/awsconfig_multiregion_cloudtrail/tasks/main.yml
+++ b/roles/awsconfig_multiregion_cloudtrail/tasks/main.yml
@@ -18,7 +18,7 @@
 
 - name: Run 'awsconfig_multiregion_cloudtrail' role
   module_defaults:
-    group/aws: "{{ aws_role_credentials }}"
+    group/aws: "{{ aws_setup_credentials__output }}"
 
   block:
     - name: Create Cloud trail and start logging or Delete existing Cloud trail
@@ -29,7 +29,7 @@
         s3_bucket_name: "{{ bucket_name | default(omit) }}"
         s3_key_prefix: "{{ key_prefix | default(omit) }}"
         is_multi_region_trail: true
-      register: result
+      register: awsconfig_multiregion_cloudtrail_result
 
     - name: Create/update trail
       when: operation == 'create'
@@ -37,12 +37,12 @@
         - name: Verify that trail has been created/updated
           ansible.builtin.debug:
             msg: Trail '{{ trail_name }}' successfully created/updated.
-          when: result is changed
+          when: awsconfig_multiregion_cloudtrail_result is changed
 
         - name: Verify that trail already exists
           ansible.builtin.debug:
             msg: Trail '{{ trail_name }}' already exists.
-          when: result is not changed
+          when: awsconfig_multiregion_cloudtrail_result is not changed
 
     - name: Delete trail
       when: operation == 'delete'
@@ -50,9 +50,9 @@
         - name: Verify that trail has been deleted
           ansible.builtin.debug:
             msg: Trail '{{ trail_name }}' successfully deleted.
-          when: result is changed
+          when: awsconfig_multiregion_cloudtrail_result is changed
 
         - name: Verify that trail does not exists anymore
           ansible.builtin.debug:
             msg: Trail '{{ trail_name }}' does not exist.
-          when: not result.changed
+          when: awsconfig_multiregion_cloudtrail_result is not changed
