--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -1,6 +1,6 @@
-name: changelog
+name: CI
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 on:
@@ -18,5 +18,5 @@ on:
       - '*'
 
 jobs:
-  test:
+  changelog:
     uses: ansible-network/github_actions/.github/workflows/changelog.yml@main
