--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -1,35 +1,21 @@
 ---
-name: Linters
+name: CI
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 'on':
   push:
     branches:
       - main
+      - stable-*
   pull_request:
     branches:
       - main
+      - stable-*
 
 jobs:
-
   linters:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python_version: ['3.8']
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-
-      - name: Set up Python ${{ matrix.python_version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python_version }}
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install tox
-      - name: Test with tox
-        run: tox -e linters -vv
-
+    uses: ansible-network/github_actions/.github/workflows/tox-linters.yml@main
   ansible-lint:
     uses: ansible-network/github_actions/.github/workflows/ansible-lint.yml@main
