--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -1,17 +1,10 @@
-name: sanity
+name: CI
 concurrency:
-  group: ${{ github.head_ref }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 on:
   pull_request:
-    types:
-      - opened
-      - reopened
-      - labeled
-      - unlabeled
-      - synchronize
-      - closed
     branches:
       - main
       - stable-*
