--- a/tests/integration/targets/test_awsconfig_detach_and_delete_internet_gateway/defaults/main.yml
+++ b/tests/integration/targets/test_awsconfig_detach_and_delete_internet_gateway/defaults/main.yml
@@ -1,11 +1,13 @@
 ---
 # defaults file for awsconfig_detach_and_delete_internet_gateway
+aws_security_token: '{{ security_token | default(omit) }}'
 test_image_filter:
   architecture: x86_64
   virtualization-type: hvm
   root-device-type: ebs
-  name: Fedora-Cloud-Base-35-*
+  name: Fedora-Cloud-Base-37-*
 
-test_vpc_cidr: 172.10.0.0/16
-test_subnet_cidr: 172.10.0.0/24
-test_ec2_instance_name: ec2fedora
+test_vpc_name: "vpc-{{ resource_prefix }}"
+test_vpc_cidr: "172.{{ 255 | random(seed=resource_prefix) }}.0.0/16"
+test_subnet_cidr: "172.{{ 255 | random(seed=resource_prefix) }}.0.0/24"
+test_ec2_instance_name: "ec2-{{ resource_prefix }}"
