--- a/tests/integration/targets/test_awsconfig_detach_and_delete_internet_gateway/tasks/teardown.yml
+++ b/tests/integration/targets/test_awsconfig_detach_and_delete_internet_gateway/tasks/teardown.yml
@@ -1,58 +1,51 @@
 ---
-- name: Get vpc information
-  amazon.aws.ec2_vpc_net_info:
-    filters:
-      tag:Name: "{{ test_vpc_name }}"
-  register: vpc
-
 - name: Teardown
-  when: vpc.vpcs | length == 1
+  module_defaults:
+    group/aws:
+      aws_access_key: "{{ aws_access_key }}"
+      aws_secret_key: "{{ aws_secret_key }}"
+      security_token: "{{ security_token | default(omit) }}"
+      region: "{{ aws_region }}"
   block:
-    - name: Set 'vpc_id' variable
-      ansible.builtin.set_fact:
-        vpc_id: "{{ vpc.vpcs.0.vpc_id }}"
-
     - name: Get EC2 instance info
       amazon.aws.ec2_instance_info:
         filters:
-          vpc-id: "{{ vpc_id }}"
-      register: result
+          vpc-id: "{{ test_vpc_id }}"
+      register: _instances
 
-    - name: Delete EC2 instances with dependant Resources
-      when: result.instances | length == 1
-      block:
-        - name: Delete EC2 instance
-          amazon.aws.ec2_instance:
-            instance_ids:
-              - "{{ result.instances.0.instance_id }}"
-            wait: true
-            state: terminated
+    - name: Delete EC2 instances
+      amazon.aws.ec2_instance:
+        instance_ids:
+          - "{{ _instances.instances.0.instance_id }}"
+        wait: true
+        state: terminated
+      when: _instances.instances | length == 1
 
     - name: List routes table from VPC
       amazon.aws.ec2_vpc_route_table_info:
         filters:
-          vpc-id: "{{ vpc_id }}"
+          vpc-id: "{{ test_vpc_id }}"
           association.main: false
       register: route_table
 
     - name: Delete VPC route table
       amazon.aws.ec2_vpc_route_table:
         route_table_id: "{{ item }}"
-        vpc_id: "{{ vpc_id }}"
+        vpc_id: "{{ test_vpc_id }}"
         lookup: id
         state: absent
       with_items: "{{ route_table.route_tables | map(attribute='id') | list }}"
 
     - name: Delete internet gateway
       amazon.aws.ec2_vpc_igw:
-        vpc_id: "{{ vpc_id }}"
+        vpc_id: "{{ test_vpc_id }}"
         state: absent
 
     - name: Delete subnets
       amazon.aws.ec2_vpc_subnet:
         cidr: "{{ test_subnet_cidr }}"
         state: absent
-        vpc_id: "{{ vpc_id }}"
+        vpc_id: "{{ test_vpc_id }}"
 
     - name: Delete VPC
       amazon.aws.ec2_vpc_net:
