add changelog + set meaningful name for github workflow

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,9 +1,9 @@
-name: CI
+name: Integration
 on:
   pull_request_target:
 
 jobs:
-  integration:
+  test:
     runs-on: ubuntu-latest
     env:
       source: "./source"
