--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Changelog
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -18,5 +18,5 @@ on:
       - '*'
 
 jobs:
-  changelog:
+  test:
     uses: ansible-network/github_actions/.github/workflows/changelog.yml@main
