--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -32,4 +32,6 @@ jobs:
         run: tox -e linters -vv
 
   ansible-lint:
-    uses: ansible-network/github_actions/.github/workflows/ansible-lint.yml@main
+    uses: abikouo/github_actions/.github/workflows/ansible-lint.yml@ansible_lint_versionning
+    with:
+      action_ref: v6.15.0
