--- a/roles/manage_vpc_peering/defaults/main.yaml
+++ b/roles/manage_vpc_peering/defaults/main.yaml
@@ -3,5 +3,7 @@ region:
 requester_vpc:
 accepter_vpc:
 accepter_vpc_region:
+accepter_vpc_account_id:
+accepter_account_profile:
 vpc_peering_operation:
 vpc_peering_conn_id:
